--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/arrow.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MetaSpace ~ Your place to be</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3513005155477703"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
